--- a/css/main.css
+++ b/css/main.css
@@ -16,15 +16,21 @@ h1 {
     border-radius: 0.5rem;
 }
 
-.selected {
+.blanked {
     background-color: #FFF;
     border: none;
     color: white;
+    -webkit-text-fill-color: white !important;
 }
 
-.btn {
+.btn, .btninplace {
     font-size: 24px;
     height: 80px;
     width: 25%;
     cursor: pointer;
+    -webkit-text-fill-color: black;
+}
+
+.btninplace {
+    -webkit-text-fill-color: green;
 }
