--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,14 @@ h1 {
 }
 
 .blanked {
-    background-color: #FFF;
-    border: none;
-    color: white;
+    background-color: #FFF !important;
+    border: none !important;
+    color: white !important;
     -webkit-text-fill-color: white !important;
+    background-image: url("") !important;
 }
 
-.btn, .btninplace, .btnoutofplace {
+.btn, .btninplace, .btnoutofplace, .blanked {
     font-size: 24px;
     height: 80px;
     width: 25%;
